test/files/neg/t10090.check
t10090.scala:4: error: stable identifier required, but X.Y found.
  (null: Any) match { case X.Y.Z() => }
                             ^
t10090.scala:6: error: stable identifier required, but X.Y found.
  (null: Any) match { case X.Y.Z => }
                             ^
2 errors
